_docs/v0.58/embedding/sdk/api/snippets/MetabaseEmbeddingColorKeyV2.md
---
version: v0.58
has_magic_breadcrumbs: true
show_category_breadcrumb: true
show_title_breadcrumb: true
category: Embedding
title: MetabaseEmbeddingColorKeyV2
source_url: 'https://github.com/metabase/metabase/blob/master/docs/embedding/sdk/api/snippets/MetabaseEmbeddingColorKeyV2.md'
layout: new-docs
latest: true
---

```ts
type MetabaseEmbeddingColorKeyV2 = Exclude<
  | "filter"
  | "info"
  | "warning"
  | "success"
  | "error"
  | "shadow"
  | "accent0"
  | "accent0-light"
  | "accent0-dark"
  | "accent1"
  | "accent1-light"
  | "accent1-dark"
  | "accent2"
  | "accent2-light"
  | "accent2-dark"
  | "accent3"
  | "accent3-light"
  | "accent3-dark"
  | "accent4"
  | "accent4-light"
  | "accent4-dark"
  | "accent5"
  | "accent5-light"
  | "accent5-dark"
  | "accent6"
  | "accent6-light"
  | "accent6-dark"
  | "accent7"
  | "accent7-light"
  | "accent7-dark"
  | "accent-gray"
  | "accent-gray-light"
  | "accent-gray-dark"
  | "metabase-brand"
  | "metabase-brand-hover"
  | "admin-navbar"
  | "admin-navbar-secondary"
  | "admin-navbar-inverse"
  | "upsell-primary"
  | "upsell-secondary"
  | "upsell-gem"
  | "background-brand"
  | "background-disabled"
  | "background-disabled-inverse"
  | "background-error"
  | "background-error-secondary"
  | "background-highlight"
  | "background-hover"
  | "background-info"
  | "background-primary"
  | "background-primary-inverse"
  | "background-secondary"
  | "background-secondary-inverse"
  | "background-selected"
  | "background-success"
  | "background-tertiary"
  | "background-tertiary-inverse"
  | "background-warning"
  | "border"
  | "border-brand"
  | "border-strong"
  | "border-subtle"
  | "brand"
  | "brand-hover"
  | "bronze"
  | "copper"
  | "danger"
  | "focus"
  | "gold"
  | "icon-brand"
  | "icon-disabled"
  | "icon-primary"
  | "icon-secondary"
  | "illustration-brand-secondary"
  | "illustration-brand-tertiary"
  | "overlay"
  | "saturated-blue"
  | "saturated-green"
  | "saturated-purple"
  | "saturated-red"
  | "saturated-yellow"
  | "silver"
  | "success-secondary"
  | "summarize"
  | "switch-off"
  | "syntax-parameters"
  | "syntax-parameters-active"
  | "text-brand"
  | "text-hover"
  | "text-primary"
  | "text-primary-inverse"
  | "text-secondary"
  | "text-secondary-inverse"
  | "text-secondary-opaque"
  | "text-selected"
  | "text-tertiary"
  | "text-tertiary-inverse"
  | "tooltip-background"
  | "tooltip-background-focused"
  | "tooltip-text"
  | "tooltip-text-secondary"
  | "white",
  ProtectedColorKey
>;
```

Color keys available for theming in modular embedding.

Excludes protected colors such as admin colors that should not be exposed.
