_docs/v0.63/embedding/sdk/api/snippets/MetabaseEmbeddingColorKeyV2.md
---
version: v0.63
has_magic_breadcrumbs: true
show_category_breadcrumb: true
show_title_breadcrumb: true
category: Embedding
title: MetabaseEmbeddingColorKeyV2
source_url: 'https://github.com/metabase/metabase/blob/master/docs/embedding/sdk/api/snippets/MetabaseEmbeddingColorKeyV2.md'
layout: new-docs
latest: true
---

```ts
type MetabaseEmbeddingColorKeyV2 = Exclude<
  | "filter"
  | "info"
  | "warning"
  | "success"
  | "error"
  | "shadow"
  | "accent0"
  | "accent0-light"
  | "accent0-dark"
  | "accent1"
  | "accent1-light"
  | "accent1-dark"
  | "accent2"
  | "accent2-light"
  | "accent2-dark"
  | "accent3"
  | "accent3-light"
  | "accent3-dark"
  | "accent4"
  | "accent4-light"
  | "accent4-dark"
  | "accent5"
  | "accent5-light"
  | "accent5-dark"
  | "accent6"
  | "accent6-light"
  | "accent6-dark"
  | "accent7"
  | "accent7-light"
  | "accent7-dark"
  | "accent-gray"
  | "accent-gray-light"
  | "accent-gray-dark"
  | "metabase-brand"
  | "metabase-brand-hover"
  | "admin-navbar"
  | "admin-navbar-secondary"
  | "admin-navbar-inverse"
  | "upsell-primary"
  | "upsell-secondary"
  | "upsell-gem"
  | "core-metabase_brand"
  | "core-metabase_brand-hover"
  | "navbar-admin"
  | "navbar-admin-secondary"
  | "navbar-admin-inverse"
  | "background-brand"
  | "background-filter"
  | "background-disabled"
  | "background-disabled-inverse"
  | "background-error"
  | "background-error-secondary"
  | "background-highlight"
  | "background-hover"
  | "background-info"
  | "background-primary"
  | "background-primary-inverse"
  | "background-secondary"
  | "background-secondary-inverse"
  | "background-selected"
  | "background-success"
  | "background-success-secondary"
  | "background-tertiary"
  | "background-tertiary-inverse"
  | "background-warning"
  | "background-warning-secondary"
  | "border"
  | "border-strong"
  | "border-stronger"
  | "border-subtle"
  | "brand"
  | "brand-hover"
  | "danger"
  | "focus"
  | "gold"
  | "icon-brand"
  | "icon-disabled"
  | "icon-primary"
  | "icon-secondary"
  | "illustration-brand-secondary"
  | "illustration-brand-tertiary"
  | "overlay"
  | "saturated-blue"
  | "saturated-green"
  | "saturated-purple"
  | "saturated-red"
  | "saturated-yellow"
  | "success-secondary"
  | "summarize"
  | "syntax-parameters"
  | "syntax-parameters-active"
  | "text-hover"
  | "text-secondary-opaque"
  | "text-tertiary"
  | "text-tertiary-inverse"
  | "white"
  | "background_page-filter"
  | "background_page-highlighted"
  | "background_page-primary"
  | "background_page-primary-inverse"
  | "background_page-secondary"
  | "background_page-secondary-inverse"
  | "background_page-tertiary"
  | "background_page-tertiary-inverse"
  | "background_surface-brand-strong"
  | "background_surface-brand-strong-hover"
  | "background_surface-brand-strong-pressed"
  | "background_surface-brand-subtle"
  | "background_surface-brand-subtle-hover"
  | "background_surface-brand-subtle-pressed"
  | "background_surface-disabled"
  | "background_surface-disabled-inverse"
  | "background_surface-error"
  | "background_surface-error-subtle"
  | "background_surface-hover"
  | "background_surface-primary"
  | "background_surface-primary-hover"
  | "background_surface-primary-inverse"
  | "background_surface-primary-inverse-hover"
  | "background_surface-primary-inverse-pressed"
  | "background_surface-primary-pressed"
  | "background_surface-secondary"
  | "background_surface-secondary-hover"
  | "background_surface-secondary-inverse"
  | "background_surface-secondary-inverse-hover"
  | "background_surface-secondary-inverse-pressed"
  | "background_surface-secondary-pressed"
  | "background_surface-selected"
  | "background_surface-success"
  | "background_surface-warning"
  | "background_surface-warning-strong"
  | "border-brand"
  | "border-filter"
  | "border-neutral"
  | "border-neutral-strong"
  | "border-neutral-strongest"
  | "border-neutral-subtle"
  | "core-blue-saturated"
  | "core-brand"
  | "core-brand-hover"
  | "core-filter"
  | "core-gold"
  | "core-green-saturated"
  | "core-info"
  | "core-purple-saturated"
  | "core-red-saturated"
  | "core-summarize"
  | "core-white"
  | "core-white_constant"
  | "core-yellow-saturated"
  | "feedback-negative"
  | "feedback-negative-strong"
  | "feedback-neutral-strong"
  | "feedback-positive"
  | "feedback-positive-selected"
  | "feedback-positive-strong"
  | "feedback-warning"
  | "feedback-warning-strong"
  | "illustration-secondary-brand"
  | "illustration-tertiary-brand"
  | "input-focus"
  | "modal-overlay"
  | "shadow-default"
  | "switch-off"
  | "text-brand"
  | "text-brand-hover"
  | "text-brand-strong"
  | "text-brand-strong-hover"
  | "text-disabled"
  | "text-disabled-inverse"
  | "text-filter"
  | "text-primary"
  | "text-primary-inverse"
  | "text-secondary"
  | "text-secondary-inverse"
  | "text-selected"
  | "text-syntax-parameter"
  | "text-syntax-parameter-active"
  | "tooltip-background"
  | "tooltip-background-focused"
  | "tooltip-text"
  | "tooltip-text-secondary",
  ProtectedColorKey
>;
```

Color keys available for theming in modular embedding.

Excludes protected colors such as admin colors that should not be exposed.
